tree-sitter-p4/grammar.js
        p4program: $ => optional(repeat(seq(choice($.declaration, $.instantiation), $._semicolon))),

        // Common

        // Common - Parameters
        parameter_list: $ => choice(seq($.parameter_list, ',', $.parameter), $.parameter),
        parameter: $ => choice(seq(optional($.annotations), optional($.direction), $.typeRef, $.identifier), seq(optional($.annotations), optional($.direction), $.typeRef, $.identifier, '=', $.expression)),
        direction: $ => choice($.in, $.out, $.inout),
        parameters: $=> seq('(', optional($.parameter_list), ')'),

        argument_list: $ => choice($.argument, seq($.argument_list, ',', $.argument)),
        argument: $ => $.expression,
        arguments: $=> seq('(', optional($.argument_list), ')'),

        // Common - Types
        typeRef: $ => choice($.baseType, $.type_identifier),
        baseType: $ => choice($.bool, $.error, $.string, $.int, $.bit /* omitting "templated" types" */),
        parserType: $ => seq(optional($.annotations), $.parser, field('parser_name', $.identifier), optional($.typeParameters), $.parameters),

        // Mark with higher precedence so that the local states are preferred when parsing!
        // TODO: Test!
        parserStates: $ => repeat1($.parserState),
        parserState: $ => seq(optional($.annotations), $.state, $.identifier, '{', optional($.parserStatements), $.parserTransitionStatement, '}'),

        annotations: $ => repeat1($.annotation),

        //annotation: $ => choice(seq('@', "[a-z]+"), seq('@', "[a-z]+", '(', $.annotationBody, ')'), seq('@', "[a-z]+", '[', $.structuredAnnotationBody, ']')),
        annotation: $ => choice($.annotation_literal), // seq('@', "[a-z]+", '(', /* empty for now*/ ')'), seq('@', "[a-z]+", '[', /* empty for now */ ']')),


        // Instantiation
        declaration: $ => seq(choice($.parserDeclaration, $.parserTypeDeclaration, $.type_declaration, $.function_declaration, $.control_declaration)),

        type_declaration: $=> choice($.struct_declaration),
        struct_declaration: $ => seq($.struct, $.identifier, '{', optional($.struct_declaration_fields), '}'),
        struct_declaration_fields: $=> repeat1(seq($.variableDeclaration)),

        function_declaration: $=> seq($.typeRef, $.identifier, $.parameters, $.statement),

        // Make separate productions for the parser type and the parser type declaration because the latter can have type parameters.
        parserDeclaration: $ => seq($.parserType, '{', optional($.parserLocalElements), $.parserStates, '}'),

        variableDeclaration: $ => seq(optional($.annotations), $.typeRef, field('variable_name', $.identifier), optional(seq($.assignment, $.expression)), $._semicolon),

        // Control declarations
        control_declaration: $ => seq($.control, $.identifier, $.parameters, '{', repeat(choice($.table_declaration, $.action_declaration)), $.apply_statement, '}'),
        action_declaration: $ => seq($.action, $.identifier, $.parameters, $.blockStatement),
        table_declaration: $ => seq($.table, $.identifier, '{', optional($.table_property_list), '}'),

        // Table property list
        table_property_list: $ => repeat1(choice($.table_keys, $.table_actions)),
        table_keys: $=> seq($.key, '=', '{', repeat($.table_key_entry), '}'),
        table_key_entry: $=> seq($.keysetExpression, ':', $.table_key_match_type, $._semicolon),
        table_key_match_type: $ => choice($.exact), // support exact only for now.

        // Statements

        // General statements
        statements: $ => repeat1($.statement),
        statement: $ => choice($.conditionalStatement, $.blockStatement, $.expressionStatement, $.assignmentStatement, $.variableDeclaration, $.return_statement, $.exit_statement),// Limited, so far.
        blockStatement: $ => seq(optional($.annotations), '{', optional($.statements), '}'),
        conditionalStatement: $ => choice(prec(1, seq($.if, '(', $.expression, ')', $.statement)), prec(2, seq($.if, '(', $.expression, ')', $.statement, $.else, $.statement))),
        expressionStatement: $=> seq($.expression, $._semicolon),
        apply_statement: $=> seq($.apply, $.blockStatement),

        // Parser statements
        parserStatements: $ => repeat1($.parserStatement),
        parserStatement: $ => choice($.conditionalStatement, $.parserBlockStatement, $.expressionStatement, $.assignmentStatement, $.variableDeclaration), // Limited, so far.
        parserTransitionStatement: $ => seq($.transition, $.transitionSelectionExpression, $._semicolon),

        // Expressions
        expression: $ => choice($.grouped_expression, $.simple_expression),
        simple_expression: $ => choice($.identifier, $.integer, $.booleanLiteralExpression, $.string_literal, $.binaryOperatorExpression, $.arrayAccessExpression, $.fieldAccessExpression, $.function_call), // Very limited.
        booleanLiteralExpression: $ => choice($.true, $.false),
        transitionSelectionExpression: $ => choice($.identifier, $.selectExpression),
        keysetExpression: $ => choice($.expression, $.default_keyset),
        binaryOperatorExpression: $ => choice($.binaryEqualOperatorExpression,
            $.binaryLessThanOperatorExpression,
            $.binaryLessThanEqualOperatorExpression,
            $.binaryGreaterThanOperatorExpression,
            $.binaryGreaterThanEqualOperatorExpression,
            $.binaryAndOperatorExpression,
            $.binaryOrOperatorExpression,
            $.binaryAddOperatorExpression,
            $.binarySubtractOperatorExpression,
            $.binaryMultiplyOperatorExpression,
            $.binaryDivideOperatorExpression,
        ),
        arrayAccessExpression: $ => seq($.expression, $.open_bracket, $.expression, $.close_bracket),
        fieldAccessExpression: $=> prec.left(2, seq($.expression, $.field_access, $.identifier)),

        // Function call

        function_call: $=> seq($.identifier, $.arguments),

        // Binary Operations
        binaryEqualOperatorExpression: $ => prec.left(2, seq($.expression, $.double_equal, $.expression)),
        _semicolon: $ => ";",
        assignment: $ => "=",
        action: $ => "action",
        apply: $ => "apply",
        bool: $ => "bool",
        control: $ => "control",
        exact: $ => "exact",
        false: $ => "false",
        if: $ => "if",
        in: $ => "in",
        inout: $ => "inout",
        int: $ => "int",
        key: $ => "key",
        out: $ => "out",
        parser: $ => "parser",
        state: $ => "state",
        string: $ => "string",
        struct: $ => "struct",
        table: $ => "table",
        transition: $ => "transition",
        true: $ => "true",
        identifier: $ => /[A-Za-z_]+/,
        type_identifier: $ => /[A-Za-z_]+/,
        string_literal: $ => /"[^"]*"/,
        integer: $ => /[0-9]+/,
        annotation_literal: $ => /@[A-Za-z_]+/,
        double_equal: $=> '==',
        open_bracket: $=> '[',
        close_bracket: $=> ']',
