tree-sitter-p4/test/corpus/parsers.txt
=========================
Parser (No Parameters)
=========================
parser simple() {
  state start {
    transition accept;
  }
};

---
(p4program
 (declaration
  (parserDeclaration
   (parserType
    (parser)
    (identifier)
    (parameters)
   )
   (parserStates
    (parserState
     (state)
     (identifier)
     (parserTransitionStatement
      (transition)
      (transitionSelectionExpression
       (identifier)
      )
     )
    )
   )
  )
 )
)


=========================
Parser (Parameters)
=========================
parser imple(bool pname) {
  state start {
    transition accept;
  }
};

---
(p4program
 (declaration
  (parserDeclaration
   (parserType
    (parser)
    (identifier)
    (parameters
     (parameter_list
      (parameter
       (typeRef
        (baseType
         (bool)
        )
       )
       (identifier)
      )
     )
    )
   )
   (parserStates
    (parserState
     (state)
     (identifier)
     (parserTransitionStatement
      (transition)
      (transitionSelectionExpression
       (identifier)
      )
     )
    )
   )
  )
 )
)
